# files

./: .dockerignore  Dockerfile  Procfile  app.py  pyproject.toml  usage.md
static/css/: styles.css
templates/: index.html  upload.html
