[tool.poetry]
name = "files"
version = "0.1.0"
description = ""
authors = ["kjwon15 <kjwonmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-import-order = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
